--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="/images/gallery-1.jpg" alt="Компьютер" width="370" height="294">
+                    <img src="./images/gallery-1.jpg" alt="Компьютер" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/gallery-2.jpg" alt="Телефон" width="370" height="294">
+                    <img src="./images/gallery-2.jpg" alt="Телефон" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/gallery-3.jpg" alt="Планшет" width="370" height="294">
+                    <img src="./images/gallery-3.jpg" alt="Планшет" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -64,22 +64,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="/images/employee-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                <img src="./images/employee-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                 <h3>Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
             </li>
             <li>
-                <img src="/images/employee-2.jpg" alt="Ольга Репина" width="270" height="260">
+                <img src="./images/employee-2.jpg" alt="Ольга Репина" width="270" height="260">
                 <h3>Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/employee-3.jpg" alt="Николай Тарасов" width="270" height="260">
+                <img src="./images/employee-3.jpg" alt="Николай Тарасов" width="270" height="260">
                 <h3>Николай Тарасов</h3>
                 <p lang="en">Marketing</p>
             </li>
             <li>
-                <img src="/images/employee-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                <img src="./images/employee-4.jpg" alt="Михаил Ермаков" width="270" height="260">
                 <h3>Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
             </li>
