--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>   
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul> 
     </header>
     <main>
         <section>
@@ -87,11 +93,10 @@
         </section>
     </main>
     <footer>
+        <a href="" lang="en">WebStudio</a>
         <address>
             <ul>
-                <li><a href="" lang="en">WebStudio</a></li>
-                <li> 
-                    <a href="https://goo.gl/maps/agc73cYuMZpdd5328" 
+                <li> <a href="https://goo.gl/maps/agc73cYuMZpdd5328" 
                     target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
